src/objects/PMD_Program__c.object
<CustomObject>
    <description>PMD Program-level object</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Motorola</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lenovo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exclude_from_POR_Experiences_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to determine whether a Program should no longer be shown on the POR Chart</inlineHelpText>
        <label>Exclude from POR Experiences Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaunchCal_Device_Calendar_URL__c</fullName>
        <description>This field contains the URL of the Ariane Device Launch Calendar created for the program.</description>
        <inlineHelpText>Enter the URL of the Ariane Device Launch Calendar created for the program, ex: https://ariane.motorola.com/area61001/calendar72001/</inlineHelpText>
        <label>LaunchCal Device Calendar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MR__c</fullName>
        <description>For D. Schuster&apos;s POR Charts</description>
        <inlineHelpText>For D. Schuster&apos;s POR Charts</inlineHelpText>
        <label>MR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMD_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>PMD External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>POR_Grouping__c</fullName>
        <description>Used for POR chart grouping, for Dave S.</description>
        <inlineHelpText>Used for POR chart grouping, for Dave S.</inlineHelpText>
        <label>POR Grouping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Activation_Date__c</fullName>
        <label>Program Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Category__c</fullName>
        <inlineHelpText>&quot;Premium&quot;, &quot;Value&quot;, etc</inlineHelpText>
        <label>Program Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code_Name__c</fullName>
        <description>Code name when communicating related information with vendors and suppliers outside Motorola</description>
        <inlineHelpText>Code name when communicating related information with vendors and suppliers outside Motorola</inlineHelpText>
        <label>External Code Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <label>Program Status</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Shipping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_In_Market_Date__c</fullName>
        <description>removed from layout;  field no longer used 12/11/14, per Dan  (moved to PRODUCT)</description>
        <label>Requested In Market Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Active_Projects__c</fullName>
        <label># of Active Projects</label>
        <summaryFilterItems>
            <field>PMD_Project__c.Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>PMD_Project__c.Program_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Total_Projects__c</fullName>
        <label># of Total Projects</label>
        <summaryForeignKey>PMD_Project__c.Program_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Program  (PMD)</label>
    <listViews>
        <fullName>Active_Programs2</fullName>
        <columns>NAME</columns>
        <columns>Program_Code_Name__c</columns>
        <columns>Program_Status__c</columns>
        <columns>Brand__c</columns>
        <columns>of_Active_Projects__c</columns>
        <columns>of_Total_Projects__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Status__c</field>
            <operation>equals</operation>
            <value>Active,Shipping,End of Life</value>
        </filters>
        <label>Active Programs</label>
    </listViews>
    <listViews>
        <fullName>All_Programs_Lenovo</fullName>
        <columns>NAME</columns>
        <columns>Program_Code_Name__c</columns>
        <columns>Program_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Lenovo</value>
        </filters>
        <label>All Programs - Lenovo</label>
    </listViews>
    <listViews>
        <fullName>All_Programs_Motorola</fullName>
        <columns>NAME</columns>
        <columns>Program_Code_Name__c</columns>
        <columns>Program_Status__c</columns>
        <columns>of_Active_Projects__c</columns>
        <columns>of_Total_Projects__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Motorola</value>
        </filters>
        <label>All Programs - Motorola</label>
    </listViews>
    <listViews>
        <fullName>Code_names</fullName>
        <columns>NAME</columns>
        <columns>Program_Code_Name__c</columns>
        <columns>Program_ID__c</columns>
        <columns>Program_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Status__c</field>
            <operation>equals</operation>
            <value>Active,On Hold,Shipping,End of Life</value>
        </filters>
        <label>Code names</label>
    </listViews>
    <listViews>
        <fullName>Program_POR_Grouping_for_Dave</fullName>
        <columns>POR_Grouping__c</columns>
        <columns>NAME</columns>
        <columns>Program_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Status__c</field>
            <operation>equals</operation>
            <value>Active,Shipping</value>
        </filters>
        <label>Program POR Grouping for Dave</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs  (PMD)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>